Fixed resource description links overflowing in mobile screen sizes.

--- a/app/pages/resource/_resource-page.scss
+++ b/app/pages/resource/_resource-page.scss
@@ -17,6 +17,7 @@ $content-padding: 10px;
 
   a {
     color: $blue;
+    overflow-wrap: break-word;
   }
 
   &__content {
